--- a/SimpleSampleDirectXTK/SimpleSampleTK_2012.vcxproj.filters
+++ b/SimpleSampleDirectXTK/SimpleSampleTK_2012.vcxproj.filters
@@ -54,7 +54,7 @@
     <ClInclude Include="packets_utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Render.h">
+    <ClInclude Include="Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PacketVertex.h">
@@ -83,10 +83,10 @@
     <ClCompile Include="Packets.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Render.cpp">
+    <ClCompile Include="Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="WavePacketViewer.cpp">
+    <ClCompile Include="demo.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GameObject.cpp">
@@ -103,7 +103,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="WavePackets.fx">
+    <FxCompile Include="shaders.fx">
       <Filter>FX File</Filter>
     </FxCompile>
   </ItemGroup>
