--- a/.gitignore
+++ b/.gitignore
@@ -13,16 +13,10 @@
 *.recipe
 *.pch
 *.pdb
-/DirectXTK/Bin/Desktop_2012/x64/Debug/DirectXTK_Desktop_2012.vcxproj.FileListAbsolute.txt
-/DirectXTK/Bin/Desktop_2012/x64/Debug/DirectXTK_Desktop_2012.log
-/DirectXTK/Bin/Desktop_2012/Win32/Debug/DirectXTK_Desktop_2012.vcxproj.FileListAbsolute.txt
-/DirectXTK/Bin/Desktop_2012/Win32/Debug/DirectXTK_Desktop_2012.log
+/DirectXTK/Bin
 /.vs
-/DXUT/Core/Bin/DirectXTK_2012/Win32/Debug
-/DXUT/Core/Bin/DirectXTK_2012/x64/Debug
-/SimpleSampleDirectXTK/Debug
+/DXUT/Core/Bin
+/DXUT/Optional/Bin
+/Demo/Debug
 /x64
-/SimpleSampleDirectXTK/x64
-/DXUT/Core/Bin/DirectXTK_2012/x64/Release
-/DXUT/Optional/Bin/DirectXTK_2012
-/DirectXTK/Bin/Desktop_2012/x64/Release
+/Demo/x64
